--- a/scss/component/_switch.scss
+++ b/scss/component/_switch.scss
@@ -115,19 +115,20 @@
     }
 }
 
+// Theme generation
+@if (type-of($switch-colors) == "map" and length($switch-colors) != 0) {
+    $mixed-switch-themes: _mix-context-colors($switch-colors, $switch-levels);
+    $switch-themes: map-merge($mixed-switch-themes, $switch-themes);
+}
+
 // Color variants
-@each $theme, $colors in $context-themes {
-    // Lighter variation for consideration
-    //$var-indicator-bg:        map-get($colors, "context-border-color");
-    //$var-active-control-bg:   map-get($colors, "context-bg");
-    //$var-active-indicator-bg: map-get($colors, "control-bg");
+@if (type-of($switch-themes) == "map" and length($switch-themes) != 0) {
+    @each $theme, $colors in $switch-themes {
+        $var-active-indicator-bg:   map-get($colors, "bg");
 
-    $var-indicator-bg:        map-get($colors, "control-bg");
-    $var-active-control-bg:   map-get($colors, "context-bg");
-    $var-active-indicator-bg: map-get($colors, "control-hover-bg");
-
-    .switch-#{$theme} {
-        @include switch-variant($var-indicator-bg, $var-active-control-bg, $var-active-indicator-bg);
+        .switch-#{$theme} {
+            @include switch-variant($var-active-indicator-bg);
+        }
     }
 }
 
