--- a/scss/core/_buttons.scss
+++ b/scss/core/_buttons.scss
@@ -65,10 +65,23 @@ fieldset:disabled a.btn,
     pointer-events: none;
 }
 
+// Theme generation
+@if (type-of($btn-colors) == "map" and length($btn-colors) != 0) {
+    $mixed-btn-themes: _mix-context-colors($btn-colors, $btn-levels);
+    $btn-themes: map-merge($mixed-btn-themes, $btn-themes);
+}
+
+@if (type-of($btn-outline-colors) == "map" and length($btn-outline-colors) != 0) {
+    $mixed-btn-outline-themes: _mix-context-colors($btn-outline-colors, $btn-outline-levels);
+    $btn-outline-themes: map-merge($mixed-btn-outline-themes, $btn-outline-themes);
+}
+
 // Contextual color variants
-@each $theme, $colors in $context-themes {
-    .btn-#{$theme} {
-        @include button-variant-control($theme, $colors);
+@if (type-of($btn-themes) == "map" and length($btn-themes) != 0) {
+    @each $theme, $colors in $btn-themes {
+        .btn-#{$theme} {
+            @include button-variant-control($theme, $colors);
+        }
     }
 }
 
@@ -76,9 +89,12 @@ fieldset:disabled a.btn,
 .btn-outline {
     @include button-variant($btn-default-color, $btn-outline-bg, $btn-default-border-color, $btn-default-hover-color, $btn-default-hover-bg, $btn-default-hover-border-color, $btn-default-active-hover-color, $btn-default-active-hover-bg);
 }
-@each $theme, $colors in $context-themes {
-    .btn-outline-#{$theme} {
-        @include button-variant-control-outline($theme, $colors, $btn-outline-bg);
+
+@if (type-of($btn-outline-themes) == "map" and length($btn-outline-themes) != 0) {
+    @each $theme, $colors in $btn-outline-themes {
+        .btn-outline-#{$theme} {
+            @include button-variant-control-outline($theme, $colors, $btn-outline-bg);
+        }
     }
 }
 
