--- a/scss/core/_forms.scss
+++ b/scss/core/_forms.scss
@@ -222,27 +222,27 @@ textarea.form-control {
 }
 
 // Form validation states
-@if map-has-key($context-themes, "success") {
+@if map-has-key($base-colors, "success") {
     .has-success {
-        @include form-control-validation("success");
+        @include form-control-validation($success);
 
         .form-control-icon {
             background-image: $icon-success;
         }
     }
 }
-@if map-has-key($context-themes, "warning") {
+@if map-has-key($base-colors, "warning") {
     .has-warning {
-        @include form-control-validation("warning");
+        @include form-control-validation($warning);
 
         .form-control-icon {
             background-image: $icon-warning;
         }
     }
 }
-@if map-has-key($context-themes, "danger") {
+@if map-has-key($base-colors, "danger") {
     .has-danger {
-        @include form-control-validation("danger");
+        @include form-control-validation($danger);
 
         .form-control-icon {
             background-image: $icon-danger;
