--- a/scss/utilities/_background.scss
+++ b/scss/utilities/_background.scss
@@ -1,15 +1,13 @@
 // stylelint-disable declaration-no-important
 
 // Contextual backgrounds
-@each $theme, $colors in $context-themes {
-    $bg: map-get($context-colors, $theme);
-
-    @include bg-variant(".bg-#{$theme}", $bg, $level-delta-hover-bg);
+@each $theme, $color in $base-colors {
+    @include bg-variant(".bg-#{$theme}", $color, $level-delta-hover-bg);
 }
 
 // Palette colors
 @if $enable-palette {
-    @each $theme, $color in $palette-themes {
+    @each $theme, $color in $palette-colors {
         @each $level in $palette-levels {
             @include bg-palette-variant(".bg-#{$theme}-#{$level}", $color, $level, $level-delta-hover-bg);
         }
