rename text to typography, add font family utils

--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -8,6 +8,6 @@
 @import "utilities/screen-reader";
 @import "utilities/sizing";
 @import "utilities/spacing";
-@import "utilities/text";
+@import "utilities/typography";
 @import "utilities/valign";
 @import "utilities/visibility";
