add box-shadow utilities

--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -6,6 +6,7 @@
 @import "utilities/border";
 @import "utilities/position";
 @import "utilities/screen-reader";
+@import "utilities/shadow";
 @import "utilities/sizing";
 @import "utilities/spacing";
 @import "utilities/typography";
