--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -401,6 +401,26 @@ $component-sizes: (
     )
 ) !default;
 
+// Shadows
+// =====
+// Control the `box-shadow` depth.
+$shadows: () !default;
+// stylelint-disable
+$shadows: map-merge((
+    "0":  none,
+    "d1": 0 .125rem .25rem rgba($black, .15),
+    "d2": 0 .125rem .5rem rgba($black, .15),
+    "d3": 0 .125rem .75rem rgba($black, .15),
+    "d4": 0 .125rem 1rem rgba($black, .15),
+    "d5": 0 .125rem 1.25rem rgba($black, .15),
+    "i1": inset 0 .125rem .25em rgba($black, .15),
+    "i2": inset 0 .125rem .5rem rgba($black, .15),
+    "i3": inset 0 .125rem .75rem rgba($black, .15),
+    "i4": inset 0 .125rem 1rem rgba($black, .15),
+    "i5": inset 0 .125rem 1.25rem rgba($black, .15)
+), $shadows);
+// stylelint-enable
+
 
 // Component pieces
 // =====
