--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -1,6 +1,7 @@
 @import "utilities/background";
 @import "utilities/clearfix";
 @import "utilities/display";
+@import "utilities/embed";
 @import "utilities/flex";
 @import "utilities/float";
 @import "utilities/border";
