--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -1,13 +1,15 @@
 @import "utilities/background";
 @import "utilities/clearfix";
 @import "utilities/display";
+@import "utilities/embed";
 @import "utilities/flex";
 @import "utilities/float";
 @import "utilities/border";
 @import "utilities/position";
 @import "utilities/screen-reader";
+@import "utilities/shadow";
 @import "utilities/sizing";
 @import "utilities/spacing";
-@import "utilities/text";
+@import "utilities/typography";
 @import "utilities/valign";
 @import "utilities/visibility";
