--- a/scss/utilities/_typography.scss
+++ b/scss/utilities/_typography.scss
@@ -20,22 +20,16 @@
 .text-uppercase  { text-transform: uppercase !important; }
 .text-capitalize { text-transform: capitalize !important; }
 
-// Hidden text
-@each $breakpoint in map-keys($grid-breakpoints) {
-    $bprule: breakpoint-designator($breakpoint);
-
-    @include media-breakpoint-up($breakpoint) {
-        .text#{$bprule}-hide {
-            @include text-hide();
-        }
-    }
-}
-
 // Weight and italics
 .font-weight-light  { font-weight: $font-weight-light !important; }
 .font-weight-normal { font-weight: $font-weight-normal !important; }
 .font-weight-bold   { font-weight: $font-weight-bold !important; }
 .font-italic        { font-style: italic !important; }
+
+// Font families
+.font-family-sans-serif { font-family: $font-family-sans-serif !important; }
+.font-family-serif      { font-family: $font-family-serif !important; }
+.font-family-monospace  { font-family: $font-family-monospace !important; }
 
 // Truncated text
 .text-truncate {
