--- a/scss/mixins/_transition.scss
+++ b/scss/mixins/_transition.scss
@@ -1,5 +1,9 @@
 @mixin transition($transition...) {
     @if $enable-transitions {
         transition: $transition;
+
+        @media screen and (prefers-reduced-motion: reduce) {
+            transition: none;
+        }
     }
 }
